porta pra android

--- a/FishFinder/package.json
+++ b/FishFinder/package.json
@@ -30,11 +30,13 @@
     "@capacitor/status-bar": "6.0.0",
     "@datastructures-js/queue": "^4.2.3",
     "@ionic/angular": "^8.0.0",
+    "@types/http-server": "^0.12.4",
     "@types/node": "^20.14.2",
     "chroma-js": "^2.4.2",
     "denque": "^2.1.0",
     "express": "^4.19.2",
     "gsap": "^3.12.5",
+    "http-server": "^14.1.1",
     "ionicons": "^7.2.1",
     "pixi.js": "^8.1.5",
     "random": "^4.1.0",
