--- a/FishFinder/package.json
+++ b/FishFinder/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
+    "@awesome-cordova-plugins/bluetooth-classic-serial-port": "^6.7.0",
     "@capacitor/android": "6.0.0",
     "@capacitor/app": "6.0.0",
     "@capacitor/core": "6.0.0",
@@ -33,6 +34,7 @@
     "@types/http-server": "^0.12.4",
     "@types/node": "^20.14.2",
     "chroma-js": "^2.4.2",
+    "cordova-plugin-bluetooth-serial": "^0.4.7",
     "denque": "^2.1.0",
     "express": "^4.19.2",
     "gsap": "^3.12.5",
