--- a/FishFinder/package.json
+++ b/FishFinder/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
     "@awesome-cordova-plugins/bluetooth-classic-serial-port": "^6.7.0",
+    "@capacitor-community/bluetooth-le": "^6.0.0",
     "@capacitor/android": "6.0.0",
     "@capacitor/app": "6.0.0",
     "@capacitor/core": "6.0.0",
