--- a/FishFinder/package.json
+++ b/FishFinder/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^17.0.2",
     "@awesome-cordova-plugins/bluetooth-classic-serial-port": "^6.7.0",
     "@capacitor-community/bluetooth-le": "^6.0.0",
+    "@capacitor-community/keep-awake": "^5.0.0",
     "@capacitor/android": "6.0.0",
     "@capacitor/app": "6.0.0",
     "@capacitor/core": "6.0.0",
@@ -32,6 +33,7 @@
     "@capacitor/status-bar": "6.0.0",
     "@datastructures-js/queue": "^4.2.3",
     "@ionic/angular": "^8.0.0",
+    "@ionic/storage-angular": "^4.0.0",
     "@pixi/ui": "^2.1.2",
     "@types/http-server": "^0.12.4",
     "@types/node": "^20.14.2",
